# novebrowse

./: BUILD.gn  README.md  build_config.json
.github/workflows/: build.yml
config/: behavior_patterns.json  device_profiles.json  fingerprint_config.json
mojom/: fingerprint.mojom
patches/: fingerprint_core.patch
scripts/: build.py
src/: blink_fingerprint_manager.cc  blink_fingerprint_manager.h  canvas_fingerprint_protection.cc  canvas_fingerprint_protection.h  fingerprint_config.cc  fingerprint_config.h  fingerprint_manager.cc  fingerprint_manager.h  webgl_fingerprint_protection.cc  webgl_fingerprint_protection.h
src/windows/: taskbar_badge.h
